--- a/samples/sample-tennis-report/custom-visuals/multiple-selection-slicer/package.json
+++ b/samples/sample-tennis-report/custom-visuals/multiple-selection-slicer/package.json
@@ -14,7 +14,8 @@
     "d3": "5.12.0",
     "powerbi-models": "^1.4.0",
     "powerbi-visuals-api": "~2.6.1",
-    "powerbi-visuals-utils-dataviewutils": "2.2.1"
+    "powerbi-visuals-utils-dataviewutils": "2.2.1",
+    "powerbi-visuals-utils-interactivityutils": "^5.7.0"
   },
   "devDependencies": {
     "ts-loader": "6.1.0",
